<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homeLab"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_notify_lab"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_notifications" />


        <item
            android:id="@+id/nav_answerFaqsLab"
            android:icon="@drawable/ic_baseline_question_answer_24"
            android:title="@string/menu_replyFAQs" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_baseline_data_exploration_24"
            android:title="@string/menu_survStats" />

        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_signOut" />
    </group>
</menu>