<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_homeLab">


    <fragment
        android:id="@+id/nav_homeLab"
        android:name="com.example.dengueapp.HomeLabFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_lab" />

    <fragment
        android:id="@+id/nav_notify_lab"
        android:name="com.example.dengueapp.notify_lab"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notify_lab" />

    <fragment
        android:id="@+id/nav_answerFaqsLab"
        android:name="com.example.dengueapp.answerFaqsLab"
        android:label="@string/menu_replyFAQs"
        tools:layout="@layout/fragment_answer_faqs_lab" />


</navigation>