<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_admin"
    app:startDestination="@+id/nav_homeAdmin">

    <!--label (in /navigation) and ID (in /menu) should be same name-->


    <fragment
        android:id="@+id/nav_homeAdmin"
        android:name="com.example.dengueapp.HomeAdminFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_admin" />
    <fragment
        android:id="@+id/nav_access"
        android:name="com.example.dengueapp.AccessAuthFragment"
        android:label="@string/menu_access"
        tools:layout="@layout/fragment_access_auth" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.dengueapp.NotifyAdminFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notify_admin" />

</navigation>